--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@ body {
 .App{
   display: flex;
   justify-content: center;
-  justify-items: center
+  align-items: center
 }
 
 .input-container input{
@@ -13,23 +13,30 @@ body {
   height: 30px;
   border: 1px solid black;
   padding: 0;
+  margin: 3px;
   background-color: pink
 }
 
 .board-container{
-  width: 300px;
-  height: 290px;
+  width: 354px;
+  height: 350px;
   display: flex;
-  flex-wrap: wrap
+  flex-wrap: wrap;
 }
 
 .box-container{
-  height: 96px;
-  width: 96px;
+  height: 116px;
+  width: 116px;
   display: flex;
   flex-wrap: wrap;
   background-color: aqua;
   border: 1px solid black
 }
 
-
+.picker-cube{
+  width: 30px;
+  height: 30px;
+  border: 1px solid black;
+  margin: 3px;
+  background-color: pink
+}
